--- a/planSubsription/style.css
+++ b/planSubsription/style.css
@@ -1,20 +1,224 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: content-box;
+:root {
+  --main-bg: rgb(25, 25, 25);
+  --plan-card-bg: hsla(0, 0%, 12%, 1);
+  --bg-upper-card: hsla(0, 0%, 19%, 1); 
+  --bg-upper-card-hover:  hsla(195, 94%, 69%, .5);
+  --features-bg-card: hsla(0, 0%, 12%, 1);
+  --bg-info: hsla(173, 76%, 94%, 1);
+  --bg-wave-1: hsla(0, 0%, 16%, 1);
+  --bg-wave-2: hsla(0, 0%, 14%, 1);
+  --bg-wave-3-card: hsla(0, 0%, 12%, 1);
+  --box-shadow: hsla(0, 0%, 0%, .4);
+  --hover-gradient-left: hsla(282, 25%, 66%, 1);
+  --hover-gradient-right: hsla(195, 94%, 69%, 1);
+  --gradient-right:hsla(356, 84%, 65%, 1);
+  --gradient-left: hsla(340, 83%, 66%, 1);
+  --btn-bg-card: hsla(0, 0%, 12%, 1);
+}
+
+*,
+*:before,
+*:after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    -webkit-tap-highlight-color: transparent;
+    font-family: "Gill Sans", "Gill Sans MT", sans-serif;
 }
 body {
-  background-color: rgb(34 34 34);
-  font-family: "Gill Sans", "Gill Sans MT", sans-serif;
+  display: grid;
+  place-content: center;
+  user-select: none;
+  overflow-x: hidden;
+  background-color: var(--main-bg);
 }
 .pricingContainer {
-
-  margin: 7% auto;
+  position: relative;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap:1.4rem;
+  margin-block: 4rem;
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  padding-inline-start: 2rem;
+  padding-inline-end: 1rem;
+}
+.pricingContainer .planCard{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 18rem;
+  background-color: var(--plan-card-bg);
+  border: 1px solid transparent;
+  border-radius: .5rem;
+  box-shadow: 0px 0px 20px var(--box-shadow);
+  will-change: transform, border;
+  transition: transform .400s ease-in-out, border .250s .250s ease-in-out;
+  overflow: hidden;
+  padding-block-end: 2rem;
+}
+.planCard:hover {
+  transform: scale(1.1);
+  z-index: 9;
+}
+.planCard .upperCard{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 12rem;
+  padding-block-start: 3rem;
+}
+.planCard .upperCard:after {
+  position: absolute;
+  content: '';
+  inset: 0;
+  background: linear-gradient(180deg, transparent 0%, var(--bg-upper-card-hover) 80%, var(--bg-upper-card-hover) 100%);
+  will-change: opacity;
+  transition: opacity .250s 1000ms ease-in-out;
+  opacity: 0;
+  z-index: -1; 
+}
+.planCard:hover .upperCard:after {
+  opacity: 1;
+}
+.upperCard .price {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
-.planCard {
+.price h2 {
+  display: flex;
+  align-items: baseline;
+  gap: .2rem;
+  font-size: 32px;
+  font-weight: 700;
+  text-transform: uppercase;
+  background: linear-gradient(90deg, var(--gradient-left) 20%, var(--gradient-right) 100%);
+  color:#EC596B;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.planCard:hover .price h2 {
+  background: linear-gradient(90deg, var(--hover-gradient-left) 20%, var(--hover-gradient-right) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.price > h2 small {
+  margin-block-start: -.4rem;
+  font-size: .9rem;
+  text-transform: lowercase;
+}
+.price > span {
+  font-size: .8rem;
+  text-transform: uppercase;
+  letter-spacing: .25rem; 
+  background: linear-gradient(90deg, var(--gradient-left) 20%, var(--gradient-right) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.planCard:hover .price > span {
+  background: linear-gradient(90deg, var(--hover-gradient-left) 20%, var(--hover-gradient-right) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.upperCard .wave {
+  width: 101%;
+  height: 5rem;
+  overflow: hidden;
+}
+.wave svg path {
+  stroke: transparent;
+  will-change: stroke;
+  transition: stroke .250s .250s ease-in-out;  
+}
+.planCard:hover svg path {
+  stroke-dasharray: 1700;
+  stroke-dashoffset: 1700;
+  animation: strokeShowUp 1s .250s linear forwards;
+}
+.wave svg:nth-child(2) {
+  position: relative;
+  top: -4rem;
+}
+.wave svg:nth-child(3) {
+  position: relative;
+  top: -6.9rem;
+}
+.planCard:hover .wave svg:nth-child(1) path {
+  stroke: var(--hover-gradient-right);
+}
+.planCard:hover .wave svg:nth-child(2) path {
+  stroke: var(--hover-gradient-left);
+}
+.planCard:hover .wave svg:nth-child(3) path {
+  width: 120%;
+  stroke: var(--hover-gradient-right);
+}
+
+.planCard .features {
+  position: relative;
+  top: -1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .7rem;
+  width: 100%;
+  padding-block: 3rem;
+  background-color: var(--features-bg-card);
+  font-size: 1rem;
+  list-style: none;
+  z-index: 999;    
+}
+.features li{
+  color:rgb(217, 216, 216);
+  will-change: color; 
+  transition: color .250s ease-in-out;
+}
+.features li:hover {
+  color: var(--hover-gradient-right);
+}
+
+.planCard .choose-btn{
+  width: 171px;
+  height: 41px;
+  border-radius: 25px;
+  text-transform: uppercase;
+  font-family:  'Trebuchet MS', sans-serif;
+  font-size: 16px;
+  background-color: transparent;
+  color:#ec596b;
+  border: 2px solid #ec596b;
+  border-radius: 4rem; 
+  transition: .5s all ease-in;
+  /* z-index: 2; */
+}
+.planCard:hover .choose-btn {
+  background:
+          linear-gradient(var(--btn-bg-card), var(--btn-bg-card)) padding-box,
+          linear-gradient(to right, var(--hover-gradient-right) 0%, var(--hover-gradient-left) 30%, var(--hover-gradient-right) 60%, var(--hover-gradient-right) 100%) border-box; 
+  background-size:  200% 200%;    
+} 
+.choose-btn:hover {
+  background:
+              linear-gradient(var(--btn-bg-card), var(--btn-bg-card)) padding-box,
+              linear-gradient(to right, var(--hover-gradient-right) 0%, var(--hover-gradient-left) 30%, var(--hover-gradient-right) 60%, var(--hover-gradient-right) 100%) border-box;     
+      background-size: 200% 200%;
+      animation: bgMove 1s linear infinite forwards; 
+  }
+
+
+
+
+
+
+
+/* .planCard {
   background-color: rgb(24 24 24);
   padding: 2rem 0 0;
   border-radius: 18px;
@@ -24,13 +228,12 @@ body {
   width: 21rem;
   height: 26rem;
 }
-.planCard .heading {
+.planCard .price {
   text-align: center;
   margin-bottom: 70px;
 }
-
-.planCard .heading h2 > small{
-    font-size: 16px;
+.price .pricing h2 > small{
+  font-size: 16px;
 }
 .planCard .heading aside{
     font-size: 20px;
@@ -77,9 +280,9 @@ body {
   font-family:  'Trebuchet MS', sans-serif;
   font-size: 16px;
   transition: .5s all ease-in;
-}
+} */
 /* styling for different card */
-.planCard:not(:nth-child(2)) .heading h2{
+/* .planCard:not(:nth-child(2)) .heading h2{
     color:  #EC596B;
     font-size: 32px;
 }
@@ -142,7 +345,7 @@ body {
       "M 0,700 C 0,700 0,466 0,466 C 75.61387839230505,489.444177258674 151.2277567846101,512.888354517348 213,496 C 274.7722432153899,479.111645482652 322.70285125386465,421.89075918928205 383,425 C 443.29714874613535,428.10924081071795 515.9608381999313,491.5486087255239 585,527 C 654.0391618000687,562.4513912744761 719.4537959464102,569.9148059086225 785,544 C 850.5462040535898,518.0851940913775 916.223978014428,458.79216763998625 1000,461 C 1083.776021985572,463.20783236001375 1185.6502919958775,526.9165235314325 1262,538 C 1338.3497080041225,549.0834764685675 1389.1748540020612,507.54173823428374 1440,466 C 1440,466 1440,700 1440,700 Z"
     );
   }
-}
+} */
 
 @media only screen and (max-width: 1024px){
   .planCard{
