--- a/quizApp/style.css
+++ b/quizApp/style.css
@@ -1,10 +1,17 @@
-
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
 
 *{
     margin:0;
     padding:0;
     box-sizing: border-box;
+}
+::-webkit-scrollbar {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(7 146 195) ;
+    border-radius: 30px;
 }
 body{
     background-color: #e9ebff;
@@ -39,6 +46,8 @@ body{
 }
 .container .quiz-box{
     padding:0 4rem 2rem;
+    animation: 1s slide-in forwards;
+    transition: all 0.5s ease-in-out;
 }
 .quiz-box .quiz-card{
     background-color: #fff;
@@ -47,10 +56,10 @@ body{
     position: relative;
     margin-top: -14px
 }
-.quiz-card .questionSection > span{
+.quiz-card .questionSection > .question{
     color: #b9b7b7;
 }
-.quiz-card .questionSection #question{
+.quiz-card .questionSection > #question-text{
     padding: 18px 0 22px;
 }
 .quiz-card .answerSection>span{
@@ -99,12 +108,15 @@ body{
     font-size: 14px;
     cursor: pointer;
 }
-.quiz-box .answers-btn #ansLater{
+.quiz-box .answers-btn .skip{
     border: 1px solid rgb(7 146 195);
     color: rgb(7 146 195);
     margin-right:12px;
 }
-.quiz-box .answers-btn #sendAnswer{
+.quiz-box .answers-btn .submit{
     background-color: rgb(7 146 195);
     color: #fff;
+    background-size: 200% 100%;
+    transition: background-position 0.3s ease;
+    background-position: -100% 0;
 }
